tests/invalid_typecheck/test_tc_or_right_int.aphi
/*
Type-check error: Invalid operand for '||' (expected bool, got int).
Right operand of '||' is int.
*/

int x;
bool b;
bool r;

procedure main {
    x = 1;
    b = true;
    r = b || x;
}
